fixing header-hero-how-it-works section tablet-view

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -179,6 +179,7 @@ header {
             line-height: 32px;
             letter-spacing: 1px;
             text-align: center;
+            color: $text-color;
         }
         
         .sign-up-steps {
