--- a/styles/tablet-view.scss
+++ b/styles/tablet-view.scss
@@ -30,11 +30,13 @@ header {
 
 .how-it-works {
     gap: 78px;
+    margin-bottom: 90px;
 
     .how-it-works-text {
         margin: 0 94px 0 94px;
         display: flex;
         flex-flow: column wrap;
+        gap:12px;
         h2 {
             font-size: 42px;
             line-height: 50.4px;
@@ -52,8 +54,24 @@ header {
         .description-br2 {
             display: none;
         }
-
+    }
+    .cards {
+        width:333.296630859375px;
+        gap: 48px;
+        .how-it-works-card {
+            margin: 0;
+        }
     }
 
     
+}
+
+.sign-up {
+    width: 334px;
+    margin: 0 auto;
+    .job-seeker {
+        h3 {
+            margin-bottom: 20px;
+        }
+    }
 }
